--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@types/classnames": "^2.2.11",
     "@types/styled-components": "^5.1.7",
     "babel-plugin-styled-components": "^1.12.0",
+    "chart.js": "^2.9.4",
     "classnames": "^2.2.6",
     "gsap": "^3.6.0",
     "next": "10.0.7",
     "node-sass": "^4.14.1",
     "react": "17.0.1",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "17.0.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
