--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@types/classnames": "^2.2.11",
+    "@types/nprogress": "^0.2.0",
     "@types/react-redux": "^7.1.16",
     "@types/redux": "^3.6.0",
     "@types/redux-devtools-extension": "^2.13.2",
@@ -19,6 +20,7 @@
     "firebase": "^8.2.9",
     "next": "10.0.7",
     "node-sass": "^4.14.1",
+    "nprogress": "^0.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-redux": "^7.2.2",
